1、使用Masonry库重构了弹窗基类及部分弹窗视图； 2、支持横竖屏切换（注意：shouldClearSpilthMask属性为YES时不支持横竖屏切换，会出现视图显示的问题）； 3、支持多个弹窗存在（详细请查看：同时显示两个弹窗的演示）；

--- a/FWPopupViewOC/Podfile
+++ b/FWPopupViewOC/Podfile
@@ -4,6 +4,9 @@ use_frameworks!
 
 target 'FWPopupViewOC' do
     
+    # 布局：https://github.com/SnapKit/Masonry
+    pod 'Masonry'
+    
     # 注意：这边引入的两个库都跟我们无关，这边只是测试作用
     
     # 弹窗Swift版本
