--- a/FWPopupViewOC/Podfile
+++ b/FWPopupViewOC/Podfile
@@ -1,16 +1,18 @@
 # Uncomment the next line to define a global platform for your project
-platform :ios, '8.0'
-use_frameworks!
+platform :ios, '9.0'
+source 'https://github.com/CocoaPods/Specs.git'
 
 target 'FWPopupViewOC' do
-    
-    # 布局：https://github.com/SnapKit/Masonry
-    pod 'Masonry'
-    
-    # 注意：这边引入的两个库都跟我们无关，这边只是测试作用
-    # 弹窗Swift版本
-    pod 'FWPopupView'
-    # 监测内存泄漏：https://github.com/Zepo/MLeaksFinder
-    pod 'MLeaksFinder'
-    
+  
+  use_frameworks!
+  
+  # 布局：https://github.com/SnapKit/Masonry
+  pod 'Masonry'
+  
+  # 注意：这边引入的两个库都跟我们无关，这边只是测试作用
+  # 弹窗Swift版本
+  pod 'FWPopupView'
+  # 监测内存泄漏：https://github.com/Zepo/MLeaksFinder
+  pod 'MLeaksFinder'
+  
 end
